# financial-pattern-recognition

./: .env.local  .gitignore  README.md  pyproject.toml
.github/workflows/: alpaca.yml  barchart.yml  macrotrends.yml  schedule.yml
exp/: NSE_Jump.py  barchart_scrape.py  check_mongo_conn.py  crypto_scalping.py  earnings_option.py  fundamentals.py  get_transcript.py  macrotrends.py  nse_data.py  openai_transcript.py  past_prompts.json  rsi_scalping.py  screener.py  seasonal_NSE.py  triple_barier.py
models/: best_decision_tree_model_5_scaler.pkl  best_decision_tree_model_6_scaler.pkl  pca_rsi_params.pkl
src/ML/: predict.py
src/ML/cnn/: TCN.py
src/ML/feature/: intrabar.py  overbar.py  structural.py
src/ML/layers/: AutoCorrelation.py  Crossformer_EncDec.py  ETSformer_EncDec.py  Embed.py  FourierCorrelation.py  Pyraformer_EncDec.py  SelfAttention_Family.py
src/agent/: llm.py  prompts.py  tradingAgent.py
src/dashboard/: app.py
src/data_client/: alpaca.py  alphavantage.py  barchart.py  crypto.py  datagovsg.py  earnings_transcript.py  fundamentals.py  fyers.py  ibkr.py  macrotrends.py  seeking_alpha.py
src/database/: azure_cosmos.py  mongoDB.py
src/feature/: intrabar.py  macro.py  orderbook.py  overbar.py  stock.py  structural.py  trend.py
src/fundamentals/: README.md  rules.py  score.py
src/intraday_options/: base.py
src/messaging/: telegram.py
src/news/: analyzer.py  filling.py  llm.py
src/order/: entry.py
src/pair_trading/: README.md  copula.py  hft_jump.py
src/portfolio/: alpaca.py  optimize.py
src/risk/: diversifier.py
src/seasonality/: seasonal.py
src/sequence/: markov.py
src/strategy/: volatility_breakout.py
src/trading/: binance.py  copula_strategy.py  paper.py
src/utils/: config.py  database.py  sizing.py
src/utils.py/: plots.py
(+34 files in other folders)
