[tool.poetry]
name = "financial pattern recognition"
version = "0.1.0"
description = "SOTA Financial Pattern Recognition Algorithms"
authors = ["Pratham <agarwalpratham2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "2.31.0"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
alpaca-py = "^0.28.1"
python-dotenv = "^1.0.1"
statsmodels = "^0.14.2"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
yfinance = "^0.2.41"
scikit-learn = "1.5.1"
websocket-client = "1.6.1"
aiohttp = "3.9.3"
asyncio = "3.4.3"
jmespath = "0.10.0"
botocore = "1.35.2"
boto3 = "1.35.2"
aws-xray-sdk = "2.14.0"
aws-lambda-powertools = "1.25.5"
fyers-apiv3 = "^3.1.2"
seaborn = "^0.13.2"
finnhub-python = "^2.4.20"
pydantic = "^2.8.2"
openai = "^1.42.0"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
coinbase-advanced-py = "^1.6.1"
browser-cookie3 = "^0.19.1"
pyportfolioopt = "^1.5.5"
pymongo = "^4.8.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
scipy = "1.10.1"
azure-cosmos = "^4.7.0"
mplfinance = "^0.12.10b0"
markdownify = "^0.13.1"
flaml = {extras = ["automl"], version = "^2.3.2"}
python-binance = "^1.0.27"
apscheduler = "^3.11.0"
tabulate = "0.9.0"
hmmlearn = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
